fix: spacing issue in error screen (#3225)

--- a/app/src/features/apiClient/screens/apiClient/components/clientView/components/errors/ErrorPlaceholder/errorPlaceholder.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/clientView/components/errors/ErrorPlaceholder/errorPlaceholder.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  padding: 32px;
+  padding: 56px 32px;
   height: 100%;
 
   .api-client-error-placeholder-content {
